# Git-Alchemist

./: .gitignore  CONTRIBUTING.md  PROFILE_DRAFT.md  README.md  pyproject.toml  requirements.txt
conductor/: product.md  style-guide.md  tech-stack.md
docs/: examples.html  index.html
git_alchemist.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/: architect.py  audit.py  cli.py  committer.py  core.py  forge.py  issue_gen.py  profile_gen.py  promote.py  repo_tools.py  sage.py  utils.py
tests/: test_core.py  test_parsing.py  test_utils.py
